[package]
name = "sdlang"
version = "0.1.0"
authors = ["jlkiri <interalia.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-diagnostics = { path = "../oro-diagnostics" }

nom = "6.0.0"
thiserror = "1.0.22"
